--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,18 +1,85 @@
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Caveat&family=Fuzzy+Bubbles&family=Grandstander:wght@100&family=Roboto+Mono:wght@300&display=swap");
 
+
+*{  padding: 0;
+    margin: 0;
+    font-family: "Architects Daughter", cursive;
+    text-align: center;
+    font-size: 1.2rem;
+}
+.navbar{
+    background-color: rgb(3, 3, 77);
+}
+.nav-link, .navbar-toggler {
+    color: rgb(194, 184, 230); 
+}
+.nav-link:hover {
+    color: rgb(217, 217, 235);
+    font-weight: bolder;
+}
+#hamburguesa {
+    color: rgb(8, 6, 14);
+    background-color: rgb(164, 176, 231); 
+}
 #index {
     background-image: url(../img/1.webp); 
     background-attachment: fixed;
     background-size: cover;
 }
-
+#bienvenida, #niveles, #tipo {
+    background-color: rgba(144, 247, 247, 0.575);
+}
 #conversor {
     background-image: url(../img/2.jpg); 
     background-attachment: fixed;
     background-size: cover;
 }
-
 #crud {
     background-image: url(../img/3.webp); 
     background-attachment: fixed;
     background-size: cover;
+}
+#btnMetrosA, #btnPiletasA{
+    display: inline;
+}
+#formMetrosA, #formPiletasA{
+    display:none;
+}
+button {
+    background-color: rgb(3, 3, 77);
+    color: rgba(181, 188, 247, 0.733);
+    text-shadow: 1px 1px 1px rgba(202, 176, 250, 0.308);
+    border-radius: 5px;
+    border-color: rgba(0, 0, 0, 0.171);
+    font-weight: bolder;
+    font-size: 1rem;
+    font-family: "Architects Daughter", cursive;
+    padding: 0.5rem;
+   
+}
+button:hover {
+    background-color: black;
+    color: rgb(217, 217, 235);
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 10px;
+}
+label{
+    background-color:rgba(181, 188, 247, 0.733);
+    padding: 0.4rem;
+    border-radius: 5px;
+    text-shadow: 1px 1px 1px rgb(202, 176, 250);
+}
+#tablaRutinasListadas {
+    background-color: rgba(215, 213, 243, 0.466);
+    width: 90%;
+    margin:auto;
+}
+#filas {
+    border: solid 1px black;
+    margin: auto;
+    text-align: left;
+}
+#filas:hover {
+    background-color: rgba(212, 224, 231, 0.589);
+    cursor: pointer;
 }
