--- a/css/estilo.css
+++ b/css/estilo.css
@@ -60,14 +60,15 @@ label{
     border-radius: 5px;
     text-shadow: 1px 1px 1px rgb(202, 176, 250);
 }
-#tablaRutinasListadas, #tablaRutinasEncontradas {
+#tablaRutinasListadas, #tablaRutinasArmadas, #tablaRutinasEncontradas {
     background-color: rgba(215, 213, 243, 0.466);
     width: 90%;
+    border-radius: 5px;
     margin:auto;
-}
+   }
 #filas {
     border: solid 1px black;
-    margin: auto;
+    margin:auto;
     text-align: left;
 }
 #filas:hover {
@@ -83,7 +84,7 @@ label{
     margin: auto;
     border-radius: 4px;
 }
-#divDeRutina, #divFrase{
+#divDeRutina, #divFrase, card{
     background-color:rgba(181, 188, 247, 0.733) ;
     width: 75%;
     margin:auto;
@@ -98,5 +99,10 @@ label{
 
 .swal-text{
     font-size: 1.8rem;
+}
+
+#divvElementos {
+    color:rgb(8, 8, 105);
+    font-weight: 700;
 }
 
